--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Cupman</title>
 </head>
 <body>
-    
+
+    <div class="main" id="main">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias beatae in numquam maiores labore dicta, vel minima dolorum illum voluptas nulla culpa suscipit repudiandae accusamus. Tempora dolores minus dolorem ea inventore quae dicta numquam unde nemo possimus, voluptas saepe, quaerat repudiandae dolor hic vitae cum in labore dolore enim ab porro ipsum sint? Minus magni exercitationem esse rem earum quod possimus labore ipsam. Porro labore quos, maxime ad aliquid repellendus. Sapiente, velit architecto. Recusandae tenetur odit officia quod odio hic sapiente aliquid blanditiis ullam quibusdam, itaque sit! Ipsum non, doloribus quis neque doloremque, vel beatae adipisci ipsa quia modi sequi?</p>
+    </div>
+     
 </body>
 </html>
